<?xml version="1.0" encoding="utf-8"?>
<!--进入首页-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/guide_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingStart="50dp"
            android:paddingEnd="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <android.support.design.widget.TextInputLayout
                android:textColorHint = "#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:textSize="13sp"
                    android:textColor="#ffffff"
                    android:hint="@string/Username"
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:paddingBottom="2dp"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:paddingStart="50dp"
            android:paddingEnd="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <android.support.design.widget.TextInputLayout
                android:textColorHint="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:textSize="13sp"
                android:hint="@string/Password"
                android:textColor="#ffffff"
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/selector_bg_edit"
                android:textCursorDrawable="@drawable/bg_input_cursor"
                android:paddingBottom="2dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <Button
                android:id="@+id/bt_go"
                android:background="@drawable/bt_shape"
                android:stateListAnimator="@drawable/state_list_animation_z"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/go"
                android:textColor="#d3d3d3">
                </Button>
        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        app:backgroundTint="@color/login_fab_color"
        android:src="@drawable/plus"
        android:transitionName="loginFab"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"/>
</RelativeLayout>
